# APAN5560-HW1

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: bigram_model.py  classifier_model.py  diffusion_model.py  ebm_model.py  embedding_model.py  gan_model.py  llm_model.py  llm_rl_model.py  main.py  rnn_model.py
helper_lib/: __init__.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
models/: assignment_cnn.pth  ebm_cifar10_best.pth  mnist_gan.pth  mnist_gan_generator.pth  rnn_model.pth
models/ebm_cifar10_checkpoints/: ebm_epoch_030.pth
scripts/: practice1_cnn.py  test_ebm_generate.py  train_diffusion_cifar10.py  train_ebm_cifar10.py  train_llm.py  train_llm_rl.py  train_mnist_gan.py
