[project]
name = "hello-world-genai"
version = "0.4.1" # for APAN5560 course Assignment 4 - Diffusion & EBM models
description = "FastAPI application with Bigram/RNN Text Generation, Word Embeddings, CIFAR-10 Image Classification, VAE, GAN, Diffusion, and EBM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "jupyter>=1.1.1",
    "pydantic>=2.12.5",
    "spacy>=3.7.0",
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",  # Progress bars for training
]

# spaCy model - must be downloaded after installing dependencies
[project.optional-dependencies]
spacy-model = [
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]
