[project]
name = "hello-world-genai"
version = "0.5.0"  # HW5 - Added RL-based LLM fine-tuning with PPO
description = "FastAPI application with Bigram/RNN/LLM/LLM-RL Text Generation, Word Embeddings, CIFAR-10 Image Classification, VAE, GAN, Diffusion, and EBM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "jupyter>=1.1.1",
    "pydantic>=2.12.5",
    "spacy>=3.7.0",
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "matplotlib>=3.7.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",  # Progress bars for training
    "transformers>=4.36.0",  # HuggingFace Transformers for GPT2
    "datasets>=2.16.0",  # HuggingFace Datasets for SQuAD Q&A dataset
    "accelerate>=0.25.0",  # For efficient model loading
    "huggingface_hub>=0.20.0",  # For uploading models to HuggingFace Hub (HW5)
]

# spaCy model - must be downloaded after installing dependencies
[project.optional-dependencies]
spacy-model = [
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]
